--- a/unbbayes.prs.mebn.softprwol/plugins/unbbayes.gui.mebn.ontology.protege/plugin.xml
+++ b/unbbayes.prs.mebn.softprwol/plugins/unbbayes.gui.mebn.ontology.protege/plugin.xml
@@ -2,10 +2,10 @@
 <!DOCTYPE plugin PUBLIC "-//JPF//Java Plug-in Manifest 1.0" "http://jpf.sourceforge.net/plugin_1_0.dtd">
 <!-- This is the plugin descriptor for UnBBayes-MEBN extension to add protege functions and OWL2/PR-OWL2 features. -->
 <!-- This version uses Protege4.1 as a library, but because protege4.1 does not work in non OSGI environments, several adaptations had to be made... -->
-<plugin id="unbbayes.gui.mebn.ontology.protege" version="1.1.4">
+<plugin id="unbbayes.gui.mebn.ontology.protege" version="1.2.5">
     <requires>
-        <import plugin-id="unbbayes.util.extension.core" plugin-version="4.11.4" />
-        <import plugin-id="unbbayes.prs.mebn" plugin-version="1.13.10"/>
+        <import plugin-id="unbbayes.util.extension.core" plugin-version="4.21.18" />
+        <import plugin-id="unbbayes.prs.mebn" plugin-version="1.14.13"/>
     </requires>
     <runtime>
        	<!-- Because dist.xml creates the resources folder, we must include it -->
@@ -125,6 +125,13 @@
         <parameter id="name" value="Property2Node" />
         <parameter id="icon" value="properties2node.png" />
         <parameter id="description" value="Convert OWL2 properties to MEBN resident nodes" />
+    </extension>
+    
+    <extension plugin-id="unbbayes.prs.mebn" point-id="MEBNEditorPanel" id="OWLImportTree">
+        <parameter id="class" value="unbbayes.gui.mebn.extension.OWLImportTreePanelBuilder" />
+        <parameter id="name" value="Imports" />
+        <parameter id="icon" value="tango-symbolic-link.png" />
+        <parameter id="description" value="Ontologies imported to this project." />
     </extension>
     
     <!-- DL reasoner for PR-OWL1 in OWL2 -->
