--- a/unbbayes.prs.mebn.softprwol/plugins/unbbayes.io.mebn.UbfIO2RL/plugin.xml
+++ b/unbbayes.prs.mebn.softprwol/plugins/unbbayes.io.mebn.UbfIO2RL/plugin.xml
@@ -7,6 +7,7 @@
         <import plugin-id="unbbayes.io.mebn.UbfIO"/>
         <import plugin-id="unbbayes.io.mebn.UbfIO2"/>
         <import plugin-id="unbbayes.gui.mebn.ontology.protege"/>
+        <import plugin-id="unbbayes.gui.mebn.prowl2rl"/>
     </requires>
     <extension plugin-id="unbbayes.prs.mebn" point-id="MEBNIO" id="UbfIO2RL">
         <parameter id="class" value="unbbayes.io.mebn.UbfIO2RL" />
