--- a/unbbayes.prs.mebn.softprwol/plugins/unbbayes.prs.mebn.prowl2rl/plugin.xml
+++ b/unbbayes.prs.mebn.softprwol/plugins/unbbayes.prs.mebn.prowl2rl/plugin.xml
@@ -2,19 +2,118 @@
 <!DOCTYPE plugin PUBLIC "-//JPF//Java Plug-in Manifest 1.0" "http://jpf.sourceforge.net/plugin_1_0.dtd">
 <!-- This is the plugin descriptor for UnBBayes-MEBN extension to add protege functions and OWL2/PR-OWL2 features. -->
 <!-- This version uses Protege4.1 as a library, but because protege4.1 does not work in non OSGI environments, several adaptations had to be made... -->
-<plugin id="unbbayes.prs.mebn.prowl2rl" version="1.0.0">
+<plugin id="unbbayes.gui.mebn.prowl2rl" version="1.0.0">
     
     <requires>
         <import plugin-id="unbbayes.prs.mebn" plugin-version="1.14.13"/>
-        <import plugin-id="unbbayes.gui.mebn.ontology.protege" plugin-version="1.1.4"/>
+        <import plugin-id="unbbayes.gui.mebn.ontology.protege" plugin-version="1.2.5"/>
     </requires>
     
     <runtime>
        	<!-- Because dist.xml creates the resources folder, we must include it -->
-        <library type="resources" path="resources/" id="resources">
-            <!-- This folder contains JARS that Protege4.1 loads using OSGI. Because OSGI and JPF uses different (sometimes incompatible) mechanisms for plug-ins, they must be separated -->
+        <library id="unbbayes.gui.mebn.prowl2rl" path="unbbayes.gui.mebn.prowl2rl-1.0.0.jar" type="code" >
+        	<export prefix="*"/>
+        </library>        
+        <library type="code" path="lib/" id="lib">
+        	<!-- This is where protege resources resides -->
         	<export prefix="*"/>
         </library>
+       <library id="commons-codec-1.4" path="lib/commons-codec-1.4.jar" type="code" >
+        	<export prefix="*"/>
+        </library>   
+        <library id="commons-httpclient-3.1" path="lib/commons-httpclient-3.1.jar" type="code" >
+        	<export prefix="*"/>
+        </library>     
+        <library id="commons-io-2.4" path="lib/commons-io-2.4.jar" type="code" >
+        	<export prefix="*"/>
+        </library>     
+        <library id="sesame-http-client-2.7.14" path="lib/sesame-http-client-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>  
+        <library id="sesame-http-protocol-2.7.14" path="lib/sesame-http-protocol-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>      
+        <library id="sesame-model-2.7.14" path="lib/sesame-model-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>                                             
+        <library id="sesame-query-2.7.14" path="lib/sesame-query-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>      
+        <library id="sesame-queryalgebra-evaluation-2.7.14" path="lib/sesame-queryalgebra-evaluation-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>           
+        <library id="sesame-queryalgebra-model-2.7.14" path="lib/sesame-queryalgebra-model-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library> 
+        <library id="sesame-queryparser-api-2.7.14" path="lib/sesame-queryparser-api-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>   
+        <library id="sesame-queryparser-serql-2.7.14" path="lib/sesame-queryparser-serql-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>                    
+        <library id="sesame-queryparser-sparql-2.7.14" path="lib/sesame-queryparser-sparql-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>          
+        <library id="sesame-queryresultio-api-2.7.14" path="lib/sesame-queryresultio-api-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>                              
+        <library id="sesame-queryresultio-sparqlxml-2.7.14" path="lib/sesame-queryresultio-sparqlxml-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>        
+        <library id="sesame-repository-api-2.7.14" path="lib/sesame-repository-api-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>              
+        <library id="sesame-repository-event-2.7.14" path="lib/sesame-repository-event-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>  
+        <library id="sesame-repository-http-2.7.14" path="lib/sesame-repository-http-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>  
+        <library id="sesame-repository-manager-2.7.14" path="lib/sesame-repository-manager-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>  
+        <library id="sesame-repository-sail-2.7.14" path="lib/sesame-repository-sail-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>  
+        <library id="sesame-repository-sparql-2.7.14" path="lib/sesame-repository-sparql-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>          
+        <library id="sesame-rio-api-2.7.14" path="lib/sesame-rio-api-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>   
+        <library id="sesame-rio-datatypes-2.7.14" path="lib/sesame-rio-datatypes-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>   
+        <library id="sesame-rio-languages-2.7.14" path="lib/sesame-rio-languages-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>   
+        <library id="sesame-rio-ntriples-2.7.14" path="lib/sesame-rio-ntriples-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>                                               
+        <library id="sesame-rio-rdfxml-2.7.14" path="lib/sesame-rio-rdfxml-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>                                   
+        <library id="sesame-rio-trig-2.7.14" path="lib/sesame-rio-trig-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>   
+        <library id="sesame-rio-turtle-2.7.14" path="lib/sesame-rio-turtle-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>   
+        <library id="sesame-sail-api-2.7.14" path="lib/sesame-sail-api-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>   
+        <library id="sesame-inferencer-api-2.7.14" path="lib/sesame-inferencer-api-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>                           
+        <library id="sesame-memory-api-2.7.14" path="lib/sesame-memory-api-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>  
+        <library id="sesame-util-2.7.14-2.7.14" path="lib/sesame-util-2.7.14.jar" type="code" >
+        	<export prefix="*"/>
+        </library>
+        <library id="slf4j-api-1.6.1" path="lib/slf4j-api-1.6.1.jar" type="code" >
+        	<export prefix="*"/>
+        </library>                          
     </runtime>
     
     <!-- 
@@ -39,10 +138,5 @@
         <parameter id="optionPanel" value="unbbayes.gui.mebn.extension.kb.triplestore.TriplestoreOptionPanelBuilder"/>
         <parameter id="toolbar" value="unbbayes.gui.mebn.extension.kb.triplestore.TriplestoreToolBarBuilder"/>
     </extension>
-    
-   <extension plugin-id="unbbayes.prs.mebn" point-id="SSBN" id="BayesBall">
-        <parameter id="class" value="unbbayes.prs.mebn.ssbn.bayesballalgorithm.BayesBallSSBNGeneratorBuilder" />
-        <parameter id="name" value="Bayes-Ball" />
-    </extension>    
   
 </plugin>
