--- a/unbbayes.prs.mebn.softprwol/pom.xml
+++ b/unbbayes.prs.mebn.softprwol/pom.xml
@@ -1,8 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>PrOWL2RL</groupId>
-  <artifactId>PrOWL2RL</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>br.unb.cic</groupId>
+	<artifactId>unbbayes.gui.mebn.prowl2rl</artifactId>
+	<version>1.0.0</version>
 	<url>http://unbbayes.sourceforge.net
 	</url>
 	<licenses>
@@ -13,26 +14,57 @@
 			<distribution>manual</distribution>
 		</license>
 	</licenses>
-	<inceptionYear>2014</inceptionYear>	  
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-  <dependencies>
+	<developers>
+		<developer>
+			<id>laecio</id>
+			<name>Laecio Lima dos Santos</name>
+			<email>laecio@gmail.com</email>
+			<organization>University of Brasilia - UnB</organization>
+			<organizationUrl>www.unb.br</organizationUrl>
+			<roles>
+				<role>Developer</role>
+			</roles>
+			<timezone>-3</timezone>
+		</developer>
+	</developers>
+	<inceptionYear>2014</inceptionYear>
+	<name>PR-OWL 2 RL </name>
+	<organization>
+		<name>Universidade de Brasilia</name>
+		<url>http://www.unb.br</url>
+	</organization>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.5</source>
+					<target>1.5</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<descriptors>
+						<descriptor>dist.xml</descriptor>
+					</descriptors>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-site-plugin</artifactId>
+				<configuration>
+					<locales>en</locales>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<dependencies>
 		<!-- This is a plugin project for unbbayes.prs.mebn -->
 		<dependency>
 			<groupId>br.unb.cic</groupId>
 			<artifactId>unbbayes.gui.mebn.ontology.protege</artifactId>
 			<version>1.2.5</version>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>org.openrdf.sesame</groupId>
 			<artifactId>sesame-rio-rdfxml</artifactId>
@@ -43,6 +75,11 @@
 			<artifactId>sesame-rio-turtle</artifactId>
 			<version>2.7.14</version>
 		</dependency>
+		<dependency>
+			<groupId>org.openrdf.sesame</groupId>
+			<artifactId>sesame-rio-api</artifactId>
+			<version>2.7.14</version>
+		</dependency>		
 		<dependency>
 			<groupId>org.openrdf.sesame</groupId>
 			<artifactId>sesame-repository-http</artifactId>
@@ -63,139 +100,165 @@
 			<artifactId>sesame-repository-manager</artifactId>
 			<version>2.7.14</version>
 		</dependency>
-		
-			<!-- Protege 4.1 (it handles OWL2) Delete this dependencies...-->
-			 <dependency>
-			    <groupId>guess</groupId>
-			    <artifactId>org.protege.common</artifactId>
-			    <version>4.1</version>
-			</dependency>
-			 <dependency>
-			    <groupId>guess</groupId>
-			    <artifactId>org.protege.editor.core.application</artifactId>
-			    <version>4.1</version>
-			</dependency>
-			
-			<!-- This is themain editor of protege -->
-			<dependency>
-			    <groupId>guess</groupId>
-			    <artifactId>org.protege.editor.owl</artifactId>
-			    <version>4.1.0.b209_2010_09_03_0303</version>
-			</dependency>
-			
-			<!-- org.protege.editor.owl contains the following JARs, but it seems like a bug is impeding UnBBayes to load it (so, lets add explicit dependency) -->
-			<dependency>
-			    <groupId>guess</groupId>
-			    <artifactId>org.protege.owlapi.extensions</artifactId>
-			    <version>1.0.0</version>
-			</dependency>
-			<dependency>
-			    <groupId>guess</groupId>
-			    <artifactId>org.protege.xmlcatalog</artifactId>
-			    <version>1.0.0</version>
-			</dependency>
-			<dependency>
-			    <groupId>com.jgoodies</groupId>
-			    <artifactId>looks</artifactId>
-			    <version>2.2.1</version>
-			</dependency>
-			<dependency>
-			    <groupId>commons-lang</groupId>
-			    <artifactId>commons-lang</artifactId>
-			    <version>2.2</version>
-			</dependency>
-			<dependency>
-			    <groupId>guess</groupId>
-			    <artifactId>org.onemind.jxp</artifactId>
-			    <version>1.2.0</version>
-			</dependency>
-			<dependency>
-			    <groupId>guess</groupId>
-			    <artifactId>org.coode.mdock</artifactId>
-			    <version>1.0.0</version>
-			</dependency>
-			<dependency>
-			    <groupId>guess</groupId>
-			    <artifactId>org.jdesktop.swingworker</artifactId>
-			    <version>1.0.0</version>
-			</dependency>
-			
-			<!-- Protege 4.1 depends on apache felix -->
-			<dependency>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>org.apache.felix.main</artifactId>
-				<version>2.0.4</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>org.apache.felix.bundlerepository</artifactId>
-				<version>1.4.2</version>
-			</dependency>
-			<!-- There is an official equinox repository, but the required version does not match... -->
-			<dependency>
-			    <groupId>guess</groupId>
-			    <artifactId>org.eclipse.equinox.registry</artifactId>
-			    <version>3.4.100.v20090520-1800</version>
-			</dependency>
-			<dependency>
-			    <groupId>guess</groupId>
-			    <artifactId>org.eclipse.equinox.common</artifactId>
-			    <version>3.5.0.v20090520-1800</version>
-			</dependency>
-			 <dependency>
-			    <groupId>guess</groupId>
-			    <artifactId>org.eclipse.equinox.supplement</artifactId>
-			    <version>1.2.0.v20090518</version>
-			</dependency>
-			
-			
-			<!-- Protege 4.1 depends on CO-ODE -->
-			<dependency>
-			    <groupId>guess</groupId>
-			    <artifactId>org.coode.dlquery</artifactId>
-			    <version>1.1.0.2010_09_03_0304</version>
-			</dependency>
-			 
-			<!-- Protege 4.1 depends on HermiT -->
-			<dependency>
-			    <groupId>guess</groupId>
-			    <artifactId>org.semanticweb.HermiT</artifactId>
-			    <version>1.2.5.927</version>
-			</dependency>
-			 
-			<!-- Protege 4.1 depends on OWLAPI -->
-			<dependency>
-			    <groupId>guess</groupId>
-			    <artifactId>org.semanticweb.owl.owlapi</artifactId>
-			    <version>3.1.0.1602</version>
-			</dependency>
 
-			 <!-- Protege's JAXB to correctly parse XML files -->
-			 <dependency>
-			    <groupId>javax.xml.bind</groupId>
-			    <artifactId>jsr173_api</artifactId>
-			    <version>1.0</version>
-			</dependency>
-			<dependency>
-			    <groupId>com.sun.xml.bind</groupId>
-			    <artifactId>jaxb-impl</artifactId>
-			    <version>2.2.1</version>
-			</dependency>
-			<dependency>
-			    <groupId>javax.xml.bind</groupId>
-			    <artifactId>activation</artifactId>
-			    <version>1.0.2</version>
-			</dependency>
- 			<dependency>
-			    <groupId>javax.xml.bind</groupId>
-			    <artifactId>jaxb-api</artifactId>
-			    <version>2.2.1</version>
-			</dependency>
-			 <!-- Xalan 2.7.1 from UnBBayes is throwing exceptions when protege's catalogs are parsed... -->
-			 <dependency>
-			    <groupId>xalan</groupId>
-			    <artifactId>xalan</artifactId>
-			    <version>2.7.1</version>
-			</dependency>		
-  </dependencies>  
+		<!-- Protege 4.1 (it handles OWL2) Delete this dependencies... -->
+		<dependency>
+			<groupId>guess</groupId>
+			<artifactId>org.protege.common</artifactId>
+			<version>4.1</version>
+		</dependency>
+		<dependency>
+			<groupId>guess</groupId>
+			<artifactId>org.protege.editor.core.application</artifactId>
+			<version>4.1</version>
+		</dependency>
+
+		<!-- This is the main editor of protege -->
+		<dependency>
+			<groupId>guess</groupId>
+			<artifactId>org.protege.editor.owl</artifactId>
+			<version>4.1.0.b209_2010_09_03_0303</version>
+		</dependency>
+
+		<!-- org.protege.editor.owl contains the following JARs, but it seems like 
+			a bug is impeding UnBBayes to load it (so, lets add explicit dependency) -->
+		<dependency>
+			<groupId>guess</groupId>
+			<artifactId>org.protege.owlapi.extensions</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>guess</groupId>
+			<artifactId>org.protege.xmlcatalog</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.jgoodies</groupId>
+			<artifactId>looks</artifactId>
+			<version>2.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>guess</groupId>
+			<artifactId>org.onemind.jxp</artifactId>
+			<version>1.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>guess</groupId>
+			<artifactId>org.coode.mdock</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>guess</groupId>
+			<artifactId>org.jdesktop.swingworker</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+
+		<!-- Protege 4.1 depends on apache felix -->
+		<dependency>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>org.apache.felix.main</artifactId>
+			<version>2.0.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>org.apache.felix.bundlerepository</artifactId>
+			<version>1.4.2</version>
+		</dependency>
+		<!-- There is an official equinox repository, but the required version 
+			does not match... -->
+		<dependency>
+			<groupId>guess</groupId>
+			<artifactId>org.eclipse.equinox.registry</artifactId>
+			<version>3.4.100.v20090520-1800</version>
+		</dependency>
+		<dependency>
+			<groupId>guess</groupId>
+			<artifactId>org.eclipse.equinox.common</artifactId>
+			<version>3.5.0.v20090520-1800</version>
+		</dependency>
+		<dependency>
+			<groupId>guess</groupId>
+			<artifactId>org.eclipse.equinox.supplement</artifactId>
+			<version>1.2.0.v20090518</version>
+		</dependency>
+
+
+		<!-- Protege 4.1 depends on CO-ODE -->
+		<dependency>
+			<groupId>guess</groupId>
+			<artifactId>org.coode.dlquery</artifactId>
+			<version>1.1.0.2010_09_03_0304</version>
+		</dependency>
+
+		<!-- Protege 4.1 depends on HermiT -->
+		<dependency>
+			<groupId>guess</groupId>
+			<artifactId>org.semanticweb.HermiT</artifactId>
+			<version>1.2.5.927</version>
+		</dependency>
+
+		<!-- Protege 4.1 depends on OWLAPI -->
+		<dependency>
+			<groupId>guess</groupId>
+			<artifactId>org.semanticweb.owl.owlapi</artifactId>
+			<version>3.1.0.1602</version>
+		</dependency>
+
+		<!-- Protege's JAXB to correctly parse XML files -->
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jsr173_api</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>activation</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.2.1</version>
+		</dependency>
+		<!-- Xalan 2.7.1 from UnBBayes is throwing exceptions when protege's catalogs 
+			are parsed... -->
+		<dependency>
+			<groupId>xalan</groupId>
+			<artifactId>xalan</artifactId>
+			<version>2.7.1</version>
+		</dependency>
+	</dependencies>
+	<repositories>
+		<repository>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<id>central</id>
+			<name>Central Repository</name>
+			<url>http://repo.maven.apache.org/maven2</url>
+		</repository>
+	</repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<releases>
+				<updatePolicy>never</updatePolicy>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<id>central</id>
+			<name>Central Repository</name>
+			<url>http://repo.maven.apache.org/maven2</url>
+		</pluginRepository>
+	</pluginRepositories>
 </project>
